# Invoice-Extraction-Quality-Control-Service-Sudhir

./: .env.example  .gitignore  GITHUB_SETUP_GUIDE.md  README.md  VIDEO_RECORDING_GUIDE.md  pyproject.toml
ai-notes/: AI_USAGE_LOG.md  PROMPTS_USED.md
frontend/: README.md  app.js  index.html  styles.css
invoice_qc/: __init__.py  api.py  cli.py  config.py  extractor.py  rules.py  schemas.py  validator.py
samples/pdfs/: README.md
tests/: test_extractor.py  test_validator.py
